journal/test/corpus/unicode-commodities.txt
================================================================================
Unicode currency symbols - Asian
================================================================================

2023-01-01 Asian currency symbols
    assets:bank    1000 ₹
    assets:crypto    0.5 ₿
    assets:china    5000 元
    income:salary

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name)))))

================================================================================
Unicode currency symbols - Eastern European
================================================================================

2023-01-01 Eastern European currencies
    assets:russian    10000 руб
    expenses:travel    -500 руб

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Unicode commodity symbols before amount
================================================================================

2023-01-01 Symbol prefix test
    assets:rupees    ₹1000
    assets:bitcoin    ₿0.1
    assets:yuan    元500
    expenses:food    -₹100

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Unicode commodity codes - three letter
================================================================================

2023-01-01 Three letter Unicode commodities
    assets:account1    1000 РУБ
    assets:account2    500 ЮАН
    expenses:test    -100 ЕВР

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Mixed Unicode and ASCII commodities
================================================================================

2023-01-01 Mixed commodity test
    assets:usd    1000 USD
    assets:rupees    5000 ₹
    assets:bitcoin    0.1 ₿
    assets:euros    €500
    assets:yuan    元1000
    expenses:transfer    -10 USD

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Quoted Unicode commodities
================================================================================

2023-01-01 Quoted commodity test
    assets:custom    100 "比特币"
    assets:shares    50 "公司股票"
    expenses:food    -20 "代金券"

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))

================================================================================
Unicode commodities with scientific notation
================================================================================

2023-01-01 Unicode with scientific
    assets:crypto    1.5e-6 ₿
    assets:micro    2.3E8 元
    expenses:fees    -1e-3 ₹

--------------------------------------------------------------------------------

(source_file
  (transaction
    (date)
    (description)
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))
    (posting
      (account
        (account_name))
      (amount))))
